--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Juan Pinilla</title>
+    <link rel="icon" href="img/JUAN FOTO 1.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -78,7 +79,7 @@
     <div id="carouselExampleInterval" class="carousel slide d-flex align-items-center" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="#">
+                <a href="#header-nav">
                     <img src="img/Portfolio.png" class="d-block mx-auto" alt="Portfolio">
                     <div class="carousel-caption d-none d-md-block slide-text">
                         <h2>Portafolio de servicios</h2>
